--- a/Bab I - Pendahuluan.tex
+++ b/Bab I - Pendahuluan.tex
@@ -65,29 +65,29 @@ Secara umum, tahapan metodologi penelitian ini terdiri atas beberapa langkah ber
     \begin{enumerate}[a.]
         \item Studi dokumen internal terkait artefak EA, alur kerja, dan kebijakan perusahaan.
         \item Observasi terhadap penggunaan \textit{platform} SAP LeanIX dalam proses manajemen arsitektur.
-        \item Wawancara dengan pihak terkait untuk mengidentifikasi praktik tata kelola dan pola kolaborasi yang berjalan saat ini.
+        \item Wawancara dengan pihak terkait untuk mengidentifikasi praktik tata kelola dan pola kolaborasi yang berjalan saat ini. \\
     \end{enumerate}
 
     \item {Tahap studi literatur dan analisis teoretis} \\
     Pada tahap ini dilakukan pengumpulan, pengelompokan, dan penelaahan literatur yang relevan mengenai \textit{Enterprise Architecture}, \textit{EA Governance}, dan \textit{EA Maturity Model}. Literatur yang digunakan mencakup standar internasional seperti TOGAF, artikel ilmiah, serta studi kasus penerapan EA di industri sejenis. 
-    Hasil analisis literatur akan dijelaskan secara sistematis pada Bab II – Studi Literatur sebagai landasan teoretis penelitian.
+    Hasil analisis literatur akan dijelaskan secara sistematis pada Bab II – Studi Literatur sebagai landasan teoretis penelitian. \\
 
     \item {Tahap analisis kondisi saat ini dan identifikasi \textit{gap}} \\
     Berdasarkan hasil investigasi dan teori pendukung, dilakukan analisis terhadap efektivitas \textit{EA Governance} saat ini di Paragon Corp. Tahap ini mencakup:
     \begin{enumerate}[a.]
         \item Penilaian tingkat kematangan EA menggunakan kerangka \textit{Enterprise Architecture Maturity Model (EAMM)}.
-        \item Identifikasi kesenjangan (\textit{gap analysis}) antara kondisi saat ini dan praktik terbaik (\textit{best practice}) \textit{EA Governance}.
+        \item Identifikasi kesenjangan (\textit{gap analysis}) antara kondisi saat ini dan praktik terbaik (\textit{best practice}) \textit{EA Governance}. \\
     \end{enumerate}
 
     \item {Tahap perancangan model perbaikan \textit{EA Governance}} \\
     Pada tahap ini dirancang model perbaikan \textit{EA Governance} yang lebih terstruktur, selaras dengan \textit{maturity level} yang ditargetkan, dan sesuai konteks organisasi. 
-    Model rancangan akan mencakup komponen peran dan tanggung jawab, proses kerja, serta mekanisme evaluasi dan pembaruan artefak EA.
+    Model rancangan akan mencakup komponen peran dan tanggung jawab, proses kerja, serta mekanisme evaluasi dan pembaruan artefak EA. \\
 
     \item {Tahap evaluasi dan validasi model} \\
     Model yang dihasilkan kemudian dievaluasi untuk menilai kelayakan dan dampaknya terhadap efektivitas pengelolaan EA. Evaluasi dilakukan melalui:
     \begin{enumerate}[a.]
         \item \textit{Expert review} bersama \textit{stakeholder} internal Paragon Corp.
-        \item Analisis perbandingan antara kondisi sebelum dan sesudah penerapan model secara konseptual.
+        \item Analisis perbandingan antara kondisi sebelum dan sesudah penerapan model secara konseptual. \\
     \end{enumerate}
 
     \item {Tahap penyusunan laporan tugas akhir} \\
