--- a/Bab III - Analisis-Masalah.tex
+++ b/Bab III - Analisis-Masalah.tex
@@ -6,19 +6,138 @@
 % ============================================================================================
 \chapter{ANALISIS MASALAH}
 \label{chap:analisis-masalah}
-\section{Analisis Kondisi Saat Ini}
-Menurut \textcite{laudon2020}, gambarkan terlebih dahulu model konseptual sistem yang ada saat ini. Model konseptual ini berisi berbagai komponen atau subsitem dan interaksi antarsubsistem tersebut. Setelah itu, berikan penjelasan tentang masalah yang ada pada sistem tersebut. Paragraf berikut berisi contoh penjabaran masalah sistem informasi fasilitas kesehatan untuk pasien \autocite{pressman2019}. 
-\section{Analisis Kebutuhan}
-\lipsum[4]
-\subsection{Identifikasi Masalah Pengguna}
-\lipsum[5]
-\subsection{Kebutuhan Fungsional}
-\lipsum[6]
-\subsection{Kebutuhan Nonfungsional}
-\lipsum[7]
+\section{Gambaran Umum Perusahaan}
+\subsection{Profil Paragon Corp}
+ParagonCorp adalah perusahaan \textit{Fast Moving Consumer Goods} (FMCG) bidang kosmetik di Indonesia yang mengemban tujuan utama menciptakan kebaikan 
+yang lebih besar bagi masyarakat melalui inovasi. Perusahaan ini didukung lebih dari 10.000 karyawan yang mereka sebut 
+paragonian yang tersebar di Indonesia hingga Malaysia. Perusahaan ini terus berinovasi dalam produk, program, dan 
+cara kerja untuk menyebarkan manfaat ke seluruh lapisan masyarakat \autocite{ParagonInnovation}.
+
+ParagonCorp memiliki visi yaitu menjadi perusahaan yang berkomitmen pada tata kelola terbaik dan perbaikan berkelanjutan
+agar lebih baik dari kemarin melalui produk berkualitas tinggi yang memberikan manfaat bagi paragonian, mitra, masyarakat, dan lingkungan.
+Misi ParagonCorp berfokus kepada enam pilar utama yaitu:
+\begin{enumerate}
+    \item Mengembangkan dan mendidik paragonian yang kompeten dengan keunggulan kompetitif.
+    \item Mendengarkan kebutuhan konsumen dan menciptakan produk yang melampaui ekspetasi mereka.
+    \item Meningkatkan kualitas produk melalui inovasi.
+    \item Bekerja sama dengan mitra bisnis demi keuntungan bersama.
+    \item Berusaha keras untuk menjaga bumi secara berkelanjutan.
+    \item Mendukung pengembangan generasi baru melalui pendidikan dan kesehatan untuk menciptakan sumber daya manusia yang berpengetahuan dan sehat.
+    \item Memperluas jangkauan produk, layanan, dan area bisnis.
+  \end{enumerate}
+
+\subsection{Penerapan EA di Paragon Corp}
+Pertumbuhan pesat pada Direktorat Teknologi Informasi (TI) ParagonCorp menimbulkan tantangan baru yang signifikan. Seiring dengan semakin bertambahnya 
+jumlah aplikasi dan layanan, manajemen mulai kesulitan menentukan arah strategis pengembangan TI, yang berpotensi menyebabkan ketidakselarasan. Kondisi ini kemudian mendorong 
+keputusan untuk membentuk \textit{Enterprise Architecture} (EA) pada bulan Juli 2024.
+
+Pada awal pembentukannya, Paragon Corp menjalin kerja sama dengan konsultan PwC untuk melakukan penilaian komprehensif terhadap kapabilitas EA internal. Hasil penilaian tersebut 
+menunjukkan bahwa tingkat kematangan EA di ParagonCorp berada di angka 1.2 dari skala 5. Skor ini mengindikasikan bahwa perencanaan dan keputusan yang diambil sebelumnya seringkali bersifat reaktif 
+disebabkan oleh ketiadaan data dan dokumentasi terpusat mengenai arsitektur TI yang ada. Akibatnya, tim kesulitan dalam membuat keputusan yang terinformasi dan merumuskan langkah strategis ke depan.
+
+Saat ini, tim masih berada pada fase intensif pengumpulan data berbagai pemangku kepentingan terkait aset TI yang ada. Beriringan dengan tahap ini akan segera dijalankan implementasi \textit{EA Governance} 
+yang terstruktur untuk memastikan pengembangan TI ParagonCorp di masa depan berjalan sesuai dengan panduan dan tujuan yang jelas.
+
+\section{Analisis Kondisi \textit{EA Governance} Saat Ini}
+\subsection{Struktur dan Mekanisme \textit{EA Governance} Saat Ini}
+\textit{EA Governance} di Paragon Corp melibatkan beberapa peran yang bekerja secara lintas fungsi. Secara garis besar, struktur ini terdiri atas \textit{Business Architect, Enterprise Architect, Cloud Infrastructure, IT Security,} dan \textit{Engineering Manager}.
+\begin{enumerate}
+  \item {\textit{Business Architect}} \\
+  \textit{Business Architect} bertanggung jawab dalam menginisiasi perubahan atau inisiatif melalui penyusunan dokumen \textit{User Requirement Specification} (URS), melakukan \textit{EA Impact Analysis}, dan melakukan \textit{architecture impact scoring} terhadap arsitektur bisnis dan aplikasi. \\
+
+  \item {\textit{Enterprise Architect} (EA)} \\
+  \textit{Enterprise Architect} bertindak sebagai konsultan arsitektur yang melakukan pengecekan kelengkapan artefak, memberikan arahan arsitektural, serta memonitor jalannya proyek di setiap fase. \\
+
+  \item {\textit{Cloud Infrastructure} (CI) dan \textit{IT Security}} \\
+  \textit{Cloud Infrastructure} dan \textit{IT Security} menyusun dan memperbarui artefak terkait infrastruktur dan keamanan, memastikan perubahan sejalan dengan standar keamanan dan kebutuhan infrastruktur yang relevan. \\
+
+  \item {\textit{Engineering Manager} (EM)} \\
+  \textit{Engineering Manager} mereview dokumen URS, memonitor pengembangan aplikasi, serta memastikan seluruh artefak aplikasi dan data terdokumentasi dengan baik. \\
+\end{enumerate}
+
+Alur \textit{EA Governance} terbagi menjadi lima tahap, dengan detail sebagai berikut:
+\begin{enumerate}
+  \item {Tahap \textit{Ideation}} \\
+  Tahap \textit{ideation} dimulai ketika muncul kebutuhan perubahan atau pengembangan sistem, biasanya diinisiasi oleh bisnis atau dapat juga dari IT. Inisiatif ini ditindaklanjuti dengan penyusunan dokumen \textit{User Requirement Specification} (URS) oleh \textit{Business Architect}. 
+  Langkah berikutnya, \textit{Business Architect} melakukan \textit{architecture impact scoring} untuk mengidentifikasi seberapa besar pengaruh perubahan tersebut terhadap arsitektur bisnis dan aplikasi. Penilaian ini dikategorikan menjadi dua yaitu \textit{high impact} dan \textit{low impact}.
+  \textit{High impact} dikategorikan jika perubahannya besar seperti modifikasi proses bisnis utama, pergantian sistem, atau perubahan integrasi kritikal, sedangkan \textit{low impact} dikategorikan jika perubahannya minor seperti modifikasi fitur kecil atau tampilan. \\
+
+  \textit{Business Architect} kemudian mendokumentasikan artefak bisnis seperti \textit{business process flow} dan \textit{user flow diagram} pada \textit{platform} SAP LeanIX. Informasi yang dimasukkan di URS dan SAP LeanIX berupa \textit{current state} dan \textit{desired state} seaat perubahan diimplementasikan.
+  Semua \textit{progress} dipantau melalui excel \textit{tracker} untuk memastikan ketercapaian setiap aktivitas pada tahapan \textit{ideation}. Tahap \textit{ideation} ini memastikan seluruh rencana perubahan telah tervalidasi sejak awal sebelum masuk ke tahap \textit{risk and impact}. \\
+
+  \item {Tahap \textit{Risk and Impact}} \\
+  Tahap \textit{risk and impact} berfokus pada pengkajian risiko dan dampak yang muncul dari rencana perubahan sistem. Setelah dokumen URS selesai diinisiasi pada tahap \textit{ideation}, dokumen tersebut akan dikirim oleh \textit{Business Architect} kepada \textit{Engineering Manager} untuk dilakukan \textit {review}.
+  \textit{Engineering Manager} diberikan waktu maksimal 7 hari untuk memeriksa URS yang telah dibagikan. Hasil \textit{review} tersebut disampaikan kembali kepada \textit{Business Architect} melalui grup Microsoft Teams. Jika diperlukan, diskusi tambahan terkait detail kebutuhan juga dapat dilakukan antara \textit{Business Architect} dan \textit{Engineering Manager}. \\
+
+  Setelah proses \textit{review}, \textit{Engineering Manager} memulai pembuatan artefak arsitektur aplikasi dan data. Kegiatan ini berjalan secara paralel dengan langkah \textit{Cloud Infrastructure} dan \textit{IT Security} dalam membuat rancangan awal (\textit{draft}) arsitektur infrastruktur dan keamanan. 
+  Tahapan \textit{Risk and Impact}  bertujuan agar semua risiko potensial serta dampak perubahan dapat teridentifikasi dan dianalisis sebelum memasuki tahap \textit{development}. \\
+
+  \item {Tahap \textit{Development}} \\
+  Tahap \textit{development} berfokus dalam aktivitas pengembangan kode dimulai berdasarkan \textit{task} yang telah diberikan oleh \textit{Engineering Manager} kepada \textit{software engineering}. Tahapan \textit{development} diatur berdasarkan hasil \textit{assessment} pada tahap-tahap sebelumnya, khususnya keputusan terkait dampak perubahan (\textit{high impact} atau \textit{minimum impact}).
+  Jika sebuah inisiatif bernilai \textit{high impact}, maka \textit{Business Architect} akan melakukan \textit{EA Project Monitoring} untuk fase \textit{development} dan meneruskan \textit{drafting} atau penyempurnaan artefak bisnis. \textit{Enterprise Architect} akan menyediakan konsultasi terkait arsitektur, 
+  memastikan rancangan serta implementasi tetap sejalan dengan standar dan aturan EA perusahaan. \textit{Cloud Infrastructure} dan \textit{IT Security} meneruskan \textit{drafting} penyempurnaan artefak infrastruktur dan keamanan. Selain itu \textit{Engineering Manager}  meneruskan \textit{drafting} penyempurnaan artefak aplikasi dan data. Pada fokus \textit{minimum impact}, pembaruan artefak
+  dilakukan tanpa konsultas dengan EA dan tanpa melakukan \textit{EA Project Monitoring}.\\
+
+  Selama proses \textit {development}, pembaruan artefak dapat dilakukan secara paralel sesuai kebutuhan. Sebelum transisi ke tahap \textit{IAT and Go-Live}, EA akan melakukan \textit{review} kelengkapan \textit{EA Project Monitoring} serta memastikan seluruh \textit{checklist} terpenuhi. \\
+
+  \item {Tahap \textit{UAT and Go-Live}} \\
+  Tahap \textit{UAT and Go-Live} merupakan fase validasi akhir dan peluncuran sistem yang telah dikembangkan. Prosesnya diawali dengan identifikasi kembali status \textit{high impact} atau \textit{minimum impact} atas perubahan yang akan diterapkan. Jika perubahan dikategorikan \textit{high impact}, dilakukan \textit{EA Project Monitoring} untuk fase \textit{UAT and Go-Live}. EA memastikan 
+  seluruh \textit{checklist} sudah lengkap sebelum dinyatakan siap diproduksi, sedangkan untuk \textit{minimum impact}, proses \textit{EA Project Monitoring} tidak dilakukan. \\
+
+  Pada tahap ini, seluruh artefak arsitektur (bisnis, aplikasi, data, infrastruktur, keamanan) harus difinalisasi sebelum sistem masuk ke produksi. Setelah artefak final, maka dilanjutkan pengecekan penyelesaian artefak saat \textit{Change Advisory Board} (CAB) jika perubahan bersifat \textit{high impact}, sedangkan artefak akan di cek saat \textit{Bi-weekly Architecture Change Review}
+  jika perubahannya bersifat \textit{minimum impact}. Setelah seluruh proses verifikasi dilalui dan artefak dinyatakan lengkap, status perubahan yang \textit{minimum impact} akan ditandai "\textit{complete}" di \textit{tracker}, sedangkan untuk \textit{high impact} diterima dalam \textit{Request for Change} (RFC) yang kemudian dapat dilanjutkan ke produksi. \\
+
+  \item {Tahap \textit{Hypercare}} \\
+  Tahap \textit{hypercare} adalah fase akhir dalam \textit{governance} setelah sistem dinyatakan berhasil \textit{Go Live}. Fase ini berfungsi sebagai masa pengawasan dan pendampingan operasional untuk memastikan bahwa hasil perubahan bisa berjalan stabil, tidak ada gangguan kritis, dan seluruh dokumentasi arsitektural telah lengkap. Tahapan \textit{hypercare} diawali identifikasi kembali status \textit{high impact} atau \textit{minimum impact} atas perubahan yang akan diterapkan.
+  Jika \textit{minimum impact}, proyek dapat langsung ditutup (\textit{closing project}) setelah konfirmasi stabilitas sistem dan kelengkapan artefak. Jika \textit{high impact}, dilakukan \textit{EA Project Monitoring} untuk fase \textit{hypercare}. \textit{Enterprise Architect} memastikan seluruh \textit{checklist} sudah lengkap sebelum \textit{closing project}. 
+  Selain itu, \textit{Enterprise Architect} memberikan konsultasi arsitektural selama periode \textit{hypercare} untuk membantu pemantauan sistem, \textit{monitoring} performa layanan, serta verifikasi artefak. \\
+\end{enumerate}
+
+\subsection{Pemanfaatan SAP LeanIX}
+SAP LeanIX berperan penting sebagai \textit{platform} utama dalam mendukung proses \textit{EA Governance} di Paragon Corp. Semua artefak arsitektur hingga kondisi saat ini (\textit{current state}) dan kondisi yang diharapkan (\textit{desired state}) dicatat dan dikelola secara terpusat di SAP LeanIX.
+\textit{Platform} ini memungkinkan seluruh tim yang terlibat dalam proses \textit{EA Governance} untuk mengakses dan memperbarui dokumentasi secara kolaboratif.
+
+\subsection{Permasalahan yang Ditemukan}
+Pelaksanaan \textit{EA Governance} di Paragon Corp masih menghadapi berbagai tantangan. Permasalahan tersebut dapat dikategorikan sebagai berikut:
+\begin{enumerate}
+  \item Keterbatasan Sumber Daya Manusia dan Beban Kerja \\
+  Keterbatasan sumber daya manusia pada tim \textit{Cloud Infrastructure} dan \textit{IT Security} menyebabkan pembaruan dan dokumentasi artefak arsitektur belum dapat dilakukan secara optimal. Pada proses saat ini artefak infrastruktur dan keamanan hanya diperbarui di SAP LeanIX dan tidak tercatat secara formal dalam dokumen URS. Disisi lain, \textit{Business Architect} juga memiliki beban kerja yang tinggi
+  yang menyebabkan keterbatasan waktu dalam mengambil peran pada proses \textit{EA Governance} \\
+
+  \item Rendahnya Kesadaran Pentingnya Dokumentasi \\
+  Kesadaran terhadap pentingnya dokumentasi pada artefak arsitektur belum sepenuhnya tertanam di seluruh anggota tim. Dokumentasi sering dianggap sekadar formalitas atau beban administratif, bukan sebagai kebutuhan strategis untuk pengelolaan dan pengendalian arsitektur perusahaan ke depan.
+  Hal ini berdampak pada kurangnya kedisiplinan dalam memperbarui dan melengkapi seluruh artefak EA secara berkala.\\
+
+  \item Ketidakjelasan Proses Konsultasi ke \textit{Enterprise Architect} \\
+  Saat ini belum ada parameter atau standar yang jelas mengenai aspek apa saja yang harus dikonsultasikan ke \textit{Enterprise Architect}. Proses konsultasi sering dilakukan secara informal, tanpa aturan baku yang mengikat. Di samping itu, Paragon Corp juga belum membentuk forum formal seperti \textit{Architecture Review Board} (ARB), sehingga pengambilan keputusan strategis terkait arsitektur masih kurang terstruktur dan kurang terpantau oleh lintas divisi. \\
+
+  \item \textit{EA Impact Analysis} yang Belum Menyeluruh \\
+  \textit{EA Impact Analysis} pada domain infrastruktur dan keamanan  belum dilakukan secara komprehensif sejak awal. Saat ini \textit{impact analysis} untuk kedua domain ini baru diperbarui atau di-(\textit{input}) ke SAP LeanIX setelah perubahan terlaksana. Hal ini membuka celah risiko operasional dan dapat menurunkan kualitas tata kelola arsitektur. \\
+
+  \item Tantangan Budaya Organisasi \\
+  Budaya “tidak ada paksaan” dalam organisasi menjadi tantangan tersendiri untuk menciptakan disiplin dan konsistensi dalam dokumentasi. Program-program seperti penetapan \textit{Objective Key Results} (OKR) di direktorat IT telah diimplementasikan untuk mendorong kebiasaan mendokumentasi, namun efektivitasnya sangat bergantung pada komitmen pribadi masing-masing anggota, bukan pada sistem kontrol formal dari manajemen. \\
+\end{enumerate}
+
+\section{Analisis \textit{Gap} terhadap \textit{EA Best Practice}}
+\subsection{Evaluasi Tingkat Kematangan EA}
+To be Completed (melakukan wawancara hari jumat)
+
+\subsection{\textit{Gap Analysis}}
+To be Completed (melakukan wawancara hari jumat)
+
+\section{Analisis Kebutuhan Perbaikan \textit{EA Governance}}
+\subsection{Kebutuhan Fungsional dan Non-Fungsional}
+To be Completed (melakukan wawancara hari jumat)
+
+\subsection{Prioritas Pengembangan}
+To be Completed 
+
+\subsection{Ringkasan Temuan Analisis}
+To be Completed 
 
 \section{Analisis Pemilihan Solusi}
 \subsection{Alternatif Solusi}
-\lipsum[8]
+To be Completed
+
 \subsection{Analisis Penentuan Solusi}
-\lipsum[9]
+To be Completed
