--- a/ProposalTA.tex
+++ b/ProposalTA.tex
@@ -97,6 +97,8 @@
 \usepackage{longtable}
 \usepackage{booktabs}
 \usepackage[bahasai]{datetime2}
+\usepackage{pdflscape}
+\usepackage{array}
 
 
 \setcounter{tocdepth}{4} % kedalaman daftar isi sampai subsubbab
