--- a/Bab III - Analisis-Masalah.tex
+++ b/Bab III - Analisis-Masalah.tex
@@ -63,14 +63,30 @@ Alur \textit{EA Governance} terbagi menjadi lima tahap, dengan detail sebagai be
   \textit{High impact} dikategorikan jika perubahannya besar seperti modifikasi proses bisnis utama, pergantian sistem, atau perubahan integrasi kritikal, sedangkan \textit{low impact} dikategorikan jika perubahannya minor seperti modifikasi fitur kecil atau tampilan. \\
 
   \textit{Business Architect} kemudian mendokumentasikan artefak bisnis seperti \textit{business process flow} dan \textit{user flow diagram} pada \textit{platform} SAP LeanIX. Informasi yang dimasukkan di URS dan SAP LeanIX berupa \textit{current state} dan \textit{desired state} seaat perubahan diimplementasikan.
-  Semua \textit{progress} dipantau melalui excel \textit{tracker} untuk memastikan ketercapaian setiap aktivitas pada tahapan \textit{ideation}. Tahap \textit{ideation} ini memastikan seluruh rencana perubahan telah tervalidasi sejak awal sebelum masuk ke tahap \textit{risk and impact}. \\
+  Semua \textit{progress} dipantau melalui excel \textit{tracker} untuk memastikan ketercapaian setiap aktivitas pada tahapan \textit{ideation}. Tahap \textit{ideation} ini memastikan seluruh rencana perubahan telah tervalidasi sejak awal sebelum masuk ke tahap \textit{risk and impact}. 
+  Gambar \ref{gambar:asis_ideation} menunjukkan tahapan \textit{ideation} saat ini.\\
+  \begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+    \centering
+    \captionsetup{justification=centering}
+        \includegraphics[width=1\textwidth]{image/as-isIdeation.png}
+    \caption{Tahapan \textit{Ideation} Saat Ini}
+    \label{gambar:asis_ideation}
+  \end{figure}
 
   \item {Tahap \textit{Risk and Impact}} \\
   Tahap \textit{risk and impact} berfokus pada pengkajian risiko dan dampak yang muncul dari rencana perubahan sistem. Setelah dokumen URS selesai diinisiasi pada tahap \textit{ideation}, dokumen tersebut akan dikirim oleh \textit{Business Architect} kepada \textit{Engineering Manager} untuk dilakukan \textit {review}.
   \textit{Engineering Manager} diberikan waktu maksimal 7 hari untuk memeriksa URS yang telah dibagikan. Hasil \textit{review} tersebut disampaikan kembali kepada \textit{Business Architect} melalui grup Microsoft Teams. Jika diperlukan, diskusi tambahan terkait detail kebutuhan juga dapat dilakukan antara \textit{Business Architect} dan \textit{Engineering Manager}. \\
 
   Setelah proses \textit{review}, \textit{Engineering Manager} memulai pembuatan artefak arsitektur aplikasi dan data. Kegiatan ini berjalan secara paralel dengan langkah \textit{Cloud Infrastructure} dan \textit{IT Security} dalam membuat rancangan awal (\textit{draft}) arsitektur infrastruktur dan keamanan. 
-  Tahapan \textit{Risk and Impact}  bertujuan agar semua risiko potensial serta dampak perubahan dapat teridentifikasi dan dianalisis sebelum memasuki tahap \textit{development}. \\
+  Tahapan \textit{Risk and Impact}  bertujuan agar semua risiko potensial serta dampak perubahan dapat teridentifikasi dan dianalisis sebelum memasuki tahap \textit{development}. 
+  Gambar \ref{gambar:asis_riskImpact} menunjukkan tahapan \textit{risk and impact} saat ini.\\
+  \begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+    \centering
+    \captionsetup{justification=centering}
+        \includegraphics[width=1\textwidth]{image/as-isRiskImpact.png}
+    \caption{Tahapan \textit{Risk and Impact} Saat Ini}
+    \label{gambar:asis_riskImpact}
+  \end{figure}
 
   \item {Tahap \textit{Development}} \\
   Tahap \textit{development} berfokus dalam aktivitas pengembangan kode dimulai berdasarkan \textit{task} yang telah diberikan oleh \textit{Engineering Manager} kepada \textit{software engineering}. Tahapan \textit{development} diatur berdasarkan hasil \textit{assessment} pada tahap-tahap sebelumnya, khususnya keputusan terkait dampak perubahan (\textit{high impact} atau \textit{minimum impact}).
@@ -78,19 +94,43 @@ Alur \textit{EA Governance} terbagi menjadi lima tahap, dengan detail sebagai be
   memastikan rancangan serta implementasi tetap sejalan dengan standar dan aturan EA perusahaan. \textit{Cloud Infrastructure} dan \textit{IT Security} meneruskan \textit{drafting} penyempurnaan artefak infrastruktur dan keamanan. Selain itu \textit{Engineering Manager}  meneruskan \textit{drafting} penyempurnaan artefak aplikasi dan data. Pada fokus \textit{minimum impact}, pembaruan artefak
   dilakukan tanpa konsultas dengan EA dan tanpa melakukan \textit{EA Project Monitoring}.\\
 
-  Selama proses \textit {development}, pembaruan artefak dapat dilakukan secara paralel sesuai kebutuhan. Sebelum transisi ke tahap \textit{IAT and Go-Live}, EA akan melakukan \textit{review} kelengkapan \textit{EA Project Monitoring} serta memastikan seluruh \textit{checklist} terpenuhi. \\
+  Selama proses \textit {development}, pembaruan artefak dapat dilakukan secara paralel sesuai kebutuhan. Sebelum transisi ke tahap \textit{IAT and Go-Live}, EA akan melakukan \textit{review} kelengkapan \textit{EA Project Monitoring} serta memastikan seluruh \textit{checklist} terpenuhi. 
+  Gambar \ref{gambar:asis_dev} menunjukkan tahapan \textit{development} saat ini.\\
+  \begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+    \centering
+    \captionsetup{justification=centering}
+        \includegraphics[width=1\textwidth]{image/as-isDev.png}
+    \caption{Tahapan \textit{Development} Saat Ini}
+    \label{gambar:asis_Dev}
+  \end{figure}
 
   \item {Tahap \textit{UAT and Go-Live}} \\
   Tahap \textit{UAT and Go-Live} merupakan fase validasi akhir dan peluncuran sistem yang telah dikembangkan. Prosesnya diawali dengan identifikasi kembali status \textit{high impact} atau \textit{minimum impact} atas perubahan yang akan diterapkan. Jika perubahan dikategorikan \textit{high impact}, dilakukan \textit{EA Project Monitoring} untuk fase \textit{UAT and Go-Live}. EA memastikan 
   seluruh \textit{checklist} sudah lengkap sebelum dinyatakan siap diproduksi, sedangkan untuk \textit{minimum impact}, proses \textit{EA Project Monitoring} tidak dilakukan. \\
 
   Pada tahap ini, seluruh artefak arsitektur (bisnis, aplikasi, data, infrastruktur, keamanan) harus difinalisasi sebelum sistem masuk ke produksi. Setelah artefak final, maka dilanjutkan pengecekan penyelesaian artefak saat \textit{Change Advisory Board} (CAB) jika perubahan bersifat \textit{high impact}, sedangkan artefak akan di cek saat \textit{Bi-weekly Architecture Change Review}
-  jika perubahannya bersifat \textit{minimum impact}. Setelah seluruh proses verifikasi dilalui dan artefak dinyatakan lengkap, status perubahan yang \textit{minimum impact} akan ditandai "\textit{complete}" di \textit{tracker}, sedangkan untuk \textit{high impact} diterima dalam \textit{Request for Change} (RFC) yang kemudian dapat dilanjutkan ke produksi. \\
+  jika perubahannya bersifat \textit{minimum impact}. Setelah seluruh proses verifikasi dilalui dan artefak dinyatakan lengkap, status perubahan yang \textit{minimum impact} akan ditandai "\textit{complete}" di \textit{tracker}, sedangkan untuk \textit{high impact} diterima dalam \textit{Request for Change} (RFC) yang kemudian dapat dilanjutkan ke produksi. 
+  Gambar \ref{gambar:asis_UAT} menunjukkan tahapan \textit{development} saat ini.\\
+  \begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+    \centering
+    \captionsetup{justification=centering}
+        \includegraphics[width=1\textwidth]{image/as-isUAT.png}
+    \caption{Tahapan \textit{UAT and Go-Live} Saat Ini}
+    \label{gambar:asis_UAT}
+  \end{figure}
 
   \item {Tahap \textit{Hypercare}} \\
   Tahap \textit{hypercare} adalah fase akhir dalam \textit{governance} setelah sistem dinyatakan berhasil \textit{Go Live}. Fase ini berfungsi sebagai masa pengawasan dan pendampingan operasional untuk memastikan bahwa hasil perubahan bisa berjalan stabil, tidak ada gangguan kritis, dan seluruh dokumentasi arsitektural telah lengkap. Tahapan \textit{hypercare} diawali identifikasi kembali status \textit{high impact} atau \textit{minimum impact} atas perubahan yang akan diterapkan.
   Jika \textit{minimum impact}, proyek dapat langsung ditutup (\textit{closing project}) setelah konfirmasi stabilitas sistem dan kelengkapan artefak. Jika \textit{high impact}, dilakukan \textit{EA Project Monitoring} untuk fase \textit{hypercare}. \textit{Enterprise Architect} memastikan seluruh \textit{checklist} sudah lengkap sebelum \textit{closing project}. 
-  Selain itu, \textit{Enterprise Architect} memberikan konsultasi arsitektural selama periode \textit{hypercare} untuk membantu pemantauan sistem, \textit{monitoring} performa layanan, serta verifikasi artefak. \\
+  Selain itu, \textit{Enterprise Architect} memberikan konsultasi arsitektural selama periode \textit{hypercare} untuk membantu pemantauan sistem, \textit{monitoring} performa layanan, serta verifikasi artefak. 
+  Gambar \ref{gambar:asis_hypercare} menunjukkan tahapan \textit{hypercare} saat ini.\\
+  \begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+    \centering
+    \captionsetup{justification=centering}
+        \includegraphics[width=1\textwidth]{image/as-isHypercare.png}
+    \caption{Tahapan \textit{Hypercare} Saat Ini}
+    \label{gambar:asis_hypercare}
+  \end{figure}
 \end{enumerate}
 
 \subsection{Pemanfaatan SAP LeanIX}
@@ -112,28 +152,51 @@ Pelaksanaan \textit{EA Governance} di Paragon Corp masih menghadapi berbagai tan
   Saat ini belum ada parameter atau standar yang jelas mengenai aspek apa saja yang harus dikonsultasikan ke \textit{Enterprise Architect}. Proses konsultasi sering dilakukan secara informal, tanpa aturan baku yang mengikat. Di samping itu, Paragon Corp juga belum membentuk forum formal seperti \textit{Architecture Review Board} (ARB), sehingga pengambilan keputusan strategis terkait arsitektur masih kurang terstruktur dan kurang terpantau oleh lintas divisi. \\
 
   \item \textit{EA Impact Analysis} yang Belum Menyeluruh \\
-  \textit{EA Impact Analysis} pada domain infrastruktur dan keamanan  belum dilakukan secara komprehensif sejak awal. Saat ini \textit{impact analysis} untuk kedua domain ini baru diperbarui atau di-(\textit{input}) ke SAP LeanIX setelah perubahan terlaksana. Hal ini membuka celah risiko operasional dan dapat menurunkan kualitas tata kelola arsitektur. \\
+  \textit{EA Impact Analysis} pada domain infrastruktur dan keamanan belum dilakukan secara komprehensif sejak awal. Saat ini \textit{impact analysis} untuk kedua domain ini baru diperbarui atau di-(\textit{input}) ke SAP LeanIX setelah perubahan terlaksana. Hal ini membuka celah risiko operasional dan dapat menurunkan kualitas tata kelola arsitektur. \\
 
   \item Tantangan Budaya Organisasi \\
   Budaya “tidak ada paksaan” dalam organisasi menjadi tantangan tersendiri untuk menciptakan disiplin dan konsistensi dalam dokumentasi. Program-program seperti penetapan \textit{Objective Key Results} (OKR) di direktorat IT telah diimplementasikan untuk mendorong kebiasaan mendokumentasi, namun efektivitasnya sangat bergantung pada komitmen pribadi masing-masing anggota, bukan pada sistem kontrol formal dari manajemen. \\
 \end{enumerate}
 
 \section{Analisis \textit{Gap} terhadap \textit{EA Best Practice}}
-\subsection{Evaluasi Tingkat Kematangan EA}
-To be Completed (melakukan wawancara hari jumat)
+\subsection{Perbandingan dan Evaluasi Tingkat Kematangan EA}
+Evaluasi tingkat kematangan arsitektur perusahaan dilakukan dengan membandingkan kondisi \textit{EA Governance} saat ini di Paragon Corp dengan standar EAMM yang diadopsi dari TOGAF (mengacu ke Tabel \ref{tbl:EAMM}). 
+Penilaian dimulai dengan menguraikan karakteristik tiap level pada masing-masing dimensi, khususnya pada target level 3 (\textit{Defined}), lalu mengidentifikasi posisi aktual Paragon Corp.
+Tabel \ref{tbl:Level3EAMM} menunjukkan hasil evaluasi antara kondisi aktual terhadap indikator level 3 (\textit{Defined}).
+
+\input{table/tabelDimensiL3.tex}
 
 \subsection{\textit{Gap Analysis}}
-To be Completed (melakukan wawancara hari jumat)
+\textit{Gap Analysis} dilakukan dengan membandingkan kondisi \textit{EA Governance} saat ini Paragon Corp terhadap indikator \textit{best practice} pada level 3 (\textit{Defined}) dalam TOGAF EAMM. 
+Setiap dimensi dievaluasi untuk mengidentifikasi aspek mana saja yang belum sesuai standar, sekaligus mencari faktor penyebab serta contoh konkret dari kesenjangan tersebut.
+Tabel \ref{tbl:GapEAMM} menunjukkan hasil \textit{gap} dan akan masalah \textit{EA Governance} Paragon Corp.
+
+\input{table/tabelGapEAMM.tex}
 
 \section{Analisis Kebutuhan Perbaikan \textit{EA Governance}}
-\subsection{Kebutuhan Fungsional dan Non-Fungsional}
-To be Completed (melakukan wawancara hari jumat)
+Berdasarkan hasil identifikasi masalah dan \textit{gap analysis} dalam implementasi \textit{EA Governance} di Paragon Corp, terdapat sejumlah kebutuhan mendesak yang harus diperbaiki agar tata kelola arsitektur dapat berjalan lebih efektif dan konsisten.
+\begin{enumerate}
+  \item Konsistensi Proses Konsultasi dan \textit{Review} EA \\
+  Penegasan kebijakan diperlukan pada setiap proyek, baik itu \textit{high impact} maupun \textit{minimum impact} tetap melewati tahap konsultasi dan \textit{review} oleh tim EA. 
+  Standardisasi proses ini penting agar tidak ada perubahan yang luput dari pengawasan arsitektur, sehingga risiko ketidaksesuaian atau tumpang tindih bisa dicegah sejak dini. \\
 
-\subsection{Prioritas Pengembangan}
-To be Completed 
+  \item Peningkatan Kesadaran dan Kebijakan Dokumentasi Sejak Awal \\
+  Semua tim, terutama yang menangani infrastruktur dan keamanan, harus didorong untuk secara proaktif mendokumentasikan artefak arsitektur sejak tahap awal proyek, bukan setelah implementasi berjalan. 
+  Peningkatan kesadaran ini penting agar risiko dapat teridentifikasi lebih awal dan kualitas dokumentasi lebih terjamin. \\
 
-\subsection{Ringkasan Temuan Analisis}
-To be Completed 
+  \item Pembentukan \textit{Architecture Review Board} (ARB) \\
+  Paragon Corp perlu segera membentuk forum formal seperti ARB yang melibatkan berbagai peran dan unit. Forum ini berfungsi untuk mengkaji, mengesahkan, dan memantau keputusan arsitektur agar lebih transparan, kolektif, serta tidak hanya didominasi oleh tim inti TI saja. \\
+
+  \item Integrasi Evaluasi Bisnis dalam Setiap Pengembangan IT \\
+  Penilaian atas kebutuhan bisnis harus menjadi landasan utama dalam setiap perubahan atau investasi TI. Setiap proyek atau pengembangan solusi teknologi sebaiknya diwajibkan melalui validasi dan kajian formal bersama \textit{Business Architect}, 
+  sehingga seluruh inisiatif benar-benar selaras dengan prioritas dan strategi perusahaan. \\
+
+  \item Optimalisasi Pemanfaatan SAP LeanIX Lintas Unit \\
+  SAP LeanIX tidak cukup hanya digunakan oleh tim TI. Perlu dilakukan edukasi dan pelatihan agar unit bisnis dan manajemen juga mampu mengakses, memahami, serta memanfaatkan artefak EA sebagai bahan referensi untuk pengambilan keputusan bersama. \\
+
+  \item Pembiasaan Budaya Dokumentasi dan Komunikasi Terbuka \\
+  Membangun budaya dokumentasi yang kuat serta komunikasi artefak arsitektur yang terbuka ke seluruh pemangku kepentingan sangat diperlukan. Semua pihak harus sadar bahwa dokumen arsitektur bukan hanya pelengkap administrasi, namun landasan pengendalian dan perbaikan tata kelola TI di masa depan. \\
+\end{enumerate}
 
 \section{Analisis Pemilihan Solusi}
 \subsection{Alternatif Solusi}
