--- a/Bab III - Analisis-Masalah.tex
+++ b/Bab III - Analisis-Masalah.tex
@@ -167,9 +167,9 @@ Tabel \ref{tbl:Level3EAMM} menunjukkan hasil evaluasi antara kondisi aktual terh
 \input{table/tabelDimensiL3.tex}
 
 \subsection{\textit{Gap Analysis}}
-\textit{Gap Analysis} dilakukan dengan membandingkan kondisi \textit{EA Governance} saat ini Paragon Corp terhadap indikator \textit{best practice} pada level 3 (\textit{Defined}) dalam TOGAF EAMM. 
+Berdasarkan permasalahan yang telah diidentifikasi sebelumnya, dilakukan \textit{gap analysis} dengan membandingkan kondisi \textit{EA Governance} saat ini Paragon Corp terhadap indikator \textit{best practice} pada level 3 (\textit{Defined}) dalam TOGAF EAMM. 
 Setiap dimensi dievaluasi untuk mengidentifikasi aspek mana saja yang belum sesuai standar, sekaligus mencari faktor penyebab serta contoh konkret dari kesenjangan tersebut.
-Tabel \ref{tbl:GapEAMM} menunjukkan hasil \textit{gap} dan akan masalah \textit{EA Governance} Paragon Corp.
+Tabel \ref{tbl:GapEAMM} menunjukkan hasil \textit{gap} dan akar masalah \textit{EA Governance} Paragon Corp.
 
 \input{table/tabelGapEAMM.tex}
 
@@ -195,12 +195,39 @@ Berdasarkan hasil identifikasi masalah dan \textit{gap analysis} dalam implement
   SAP LeanIX tidak cukup hanya digunakan oleh tim TI. Perlu dilakukan edukasi dan pelatihan agar unit bisnis dan manajemen juga mampu mengakses, memahami, serta memanfaatkan artefak EA sebagai bahan referensi untuk pengambilan keputusan bersama. \\
 
   \item Pembiasaan Budaya Dokumentasi dan Komunikasi Terbuka \\
-  Membangun budaya dokumentasi yang kuat serta komunikasi artefak arsitektur yang terbuka ke seluruh pemangku kepentingan sangat diperlukan. Semua pihak harus sadar bahwa dokumen arsitektur bukan hanya pelengkap administrasi, namun landasan pengendalian dan perbaikan tata kelola TI di masa depan. \\
+  Membangun budaya dokumentasi yang kuat serta komunikasi artefak arsitektur yang terbuka ke seluruh pemangku kepentingan sangat diperlukan. Semua pihak harus sadar bahwa dokumen arsitektur bukan hanya pelengkap administrasi, namun landasan pengendalian dan perbaikan tata kelola TI di masa depan. 
 \end{enumerate}
 
 \section{Analisis Pemilihan Solusi}
 \subsection{Alternatif Solusi}
-To be Completed
+Dalam upaya memperbaiki \textit{EA Governance} Paragon Corp, terdapat tiga pilihan solusi yang dapat dipertimbangkan agar pengelolaan perubahan dan inisiatif digital berjalan lebih terarah serta efektif.
+\begin{enumerate}
+  \item \textit{EA Governance} Berbasis PMBOK dan TOGAF \\
+  Solusi pertama mengusulkan penggunaan kombinasi kerangka PMBOK dan TOGAF untuk membangun tata kelola arsitektur perusahaan yang lebih terarah dan terstandar. PMBOK menawarkan struktur lima tahap utama, yaitu \textit{initiating, planning, executing, monitoring and controlling,} and \textit{closing}.
+  Sementara itu, TOGAF melengkapi dengan prinsip dan siklus pengembangan arsitektur yang selaras dengan tujuan organisasi. Pilihan ini didasarkan pada luasnya adopsi kedua kerangka tersebut di berbagai industri global sebagai \textit{best practice} pengelolaan proyek dan \textit{enterprise architecture}. \\
+
+  Kerangka ini membawa keunggulan berupa disiplin dokumentasi yang kuat, proses yang mudah diawasi, serta peluang audit yang jelas. Standarisasi alur juga menciptakan keteraturan sehingga setiap kegiatan transformasi digital selaras dengan strategi dan tujuan awal organisasi. Sementara itu, untuk kekurangannya
+  terjadi pada organisasi yang belum matang dalam tata kelola, penerapan penuh bisa terasa memberatkan, baik dari sisi waktu, biaya, maupun sumber daya manusia. Organisasi harus memiliki komitmen dari manajemen, tim yang sudah terlatih dengan prinsip PMBOK dan TOGAF, serta sistem dokumentasi yang terintegrasi. 
+  Jika solusi ini diadopsi, perusahaan akan memiliki mekanisme tata kelola yang rapi, terdokumentasi, serta terukur. Organisasi lebih siap menghadapi audit, lebih mampu mengevaluasi kinerja proyek TI, serta risiko di setiap tahapan dapat dideteksi dan diminimalisasi sejak awal. \\
+
+  \item \textit{EA Governance} Berbasis COBIT \\
+  Solusi kedua menekankan penggunaan kerangka COBIT sebagai acuan utama dalam mengatur dan mengendalikan tata kelola arsitektur TI. Kerangka ini dirancang untuk membangun sistem pengawasan, penilaian risiko, serta pengelolaan kepatuhan yang komprehensif dalam setiap siklus perubahan maupun pengambilan keputusan terkait \textit{enterprise architecture}. 
+  COBIT diakui luas dalam literatur tata kelola IT sebagai standar yang mampu meningkatkan \textit{maturity} dan mengurangi \textit{gap} antara kebutuhan bisnis dan operasional teknologi. \\
+
+  Keuntungan utama pendekatan ini adalah terciptanya pengendalian internal yang kuat serta mudah dilakukan audit, sehingga potensi kegagalan atau deviasi terhadap kebijakan dapat ditekan secara optimal. Selain itu, metode ini juga memberikan peta kapabilitas yang jelas dan membantu organisasi meningkatkan tingkat kematangan \textit{governance} secara terukur.
+  Sementara itu untuk kekurangannya model COBIT cenderung membutuhkan budaya tata kelola yang tinggi serta tim auditor internal yang kompeten. Birokrasi dan proses \textit{compliance} yang ketat dapat memperlambat respons terhadap perubahan kebutuhan, terutama pada organisasi yang mengutamakan adaptasi cepat.
+  Perusahaan yang menerapkan model ini akan memiliki sistem tata kelola yang sangat terjaga terhadap risiko dan kepatuhan. Hubungan antara divisi teknologi dan bisnis menjadi lebih transparan, dan tindakan perbaikan dapat langsung dieksekusi begitu ditemukan masalah di audit rutin. \\
+
+  \item \textit{EA Governance} Berbasis \textit{Agile} \\
+  Solusi ketiga memanfaatkan filosofi \textit{agile} untuk memperbarui dan mempercepat proses tata kelola arsitektur TI di perusahaan. Metode ini mendorong kerja sama lintas tim, penyesuaian yang fleksibel terhadap perubahan kebutuhan bisnis, serta pelaksanaan evaluasi dan perbaikan secara berkala sesuai perkembangan proyek. 
+  Agile telah banyak dipakai oleh perusahaan yang bergerak di bidang teknologi dan industri kreatif untuk meningkatkan ketanggapan serta inovasi organisasi. \\
+
+  Kekuatan utama model \textit{agile} adalah kemampuannya untuk cepat beradaptasi terhadap dinamika eksternal maupun perubahan internal. Kolaborasi yang intensif antartim meningkatkan kualitas output serta mempercepat waktu penyelesaian masalah. Inovasi lebih mudah diwujudkan dengan pola evaluasi dan perbaikan yang terus-menerus.
+  Sementara itu untuk kelemahan pendekatan ini yaitu \textit{agile} membutuhkan disiplin komunikasi dan koordinasi yang tinggi di antara semua anggota tim. Jika tidak dijalankan dengan baik, fleksibilitas bisa memunculkan inkonsistensi dalam dokumentasi, serta potensi \textit{overload} pada anggota tim akibat banyaknya perubahan yang harus direspons cepat.
+  Model ini akan membentuk organisasi yang lebih gesit dan responsif terhadap perubahan pasar serta tuntutan pengguna. Risiko yang muncul dapat segera diidentifikasi dan ditangani secara kolektif, namun organisasi perlu menjaga konsistensi dokumentasi dan menjaga agar hasil tetap sesuai dengan tujuan strategis. \\
+\end{enumerate}
+
+Tiga alternatif solusi yang telah dijelaskan sebelumnya merupakan pilihan dalam perbaikan \textit{EA Governance} Paragon Corp. Setiap solusi memiliki karakteristik, keunggulan, serta potensi tantangannya sendiri. Pada bagian berikutnya, akan dilakukan analisis penentuan solusi untuk memilih alternatif yang paling sesuai dengan kebutuhan dan tujuan organisasi.
 
 \subsection{Analisis Penentuan Solusi}
 To be Completed
